Added ability to update current user data Updated documentation
